Add V8_EXPORT_PRIVATE to v8::internal::GetRandomMmapAddr()

To unbreak the component build of unittests on Mac after #48124.

Bug: chromium:768094
Change-Id: I0e0f4ade0e19a71554f68e7050c525376f125ae5
Reviewed-on: https://chromium-review.googlesource.com/682094
Reviewed-by: Bill Budge <bbudge@chromium.org>
Commit-Queue: Hans Wennborg <hans@chromium.org>
Cr-Commit-Position: refs/heads/master@{#48146}